[package]
name = "tm-derive"
version = "2020.11.0"
authors = ["Jonathan Nilsson <jonathan@voysys.se>"]
edition = "2018"

description = "FFI bindings for the machinery api"
documentation = "https://docs.rs/tm-derive"
readme = "../README.md"
keywords = ["the-machinery", "our-machinery"]
categories = ["game-engines"]
license = "0BSD"
repository = "https://github.com/JoNil/tm-rs"


[lib]
proc-macro = true

[dependencies]
Inflector = "0.11"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features=["extra-traits"] }