[package]
name = "tm-rs"
version = "2020.11.9"
authors = ["Jonathan Nilsson <jonathan@voysys.se>"]
edition = "2018"

description = "FFI bindings for the machinery api"
documentation = "https://docs.rs/tm-rs"
readme = "../README.md"
keywords = ["the-machinery", "our-machinery"]
categories = ["api-bindings", "game-engines"]
license = "0BSD"
repository = "https://github.com/JoNil/tm-rs"

[dependencies]
anymap = "0.12"
lazy_static = "1"
paste = "1"
tm-sys = "2020.11.5"